--- a/index.Rmd
+++ b/index.Rmd
@@ -8,32 +8,16 @@ documentclass: book
 github-repo: github/technocrat/technocrat.github.io
 description: "Landing site"
 ---
-# Preface {#preface}
+# Purpose  {#preface}
 
-This draft shows where Richard Careaga's data science skills stand in mid-2018. 
+This site shows where Richard Careaga's data science skills stand in mid-2018. 
+
+Its intent is to provide prospective employers with concrete evidence of my abilities to do the work of a data sciencist. The content is all my own work, and none of the cases are based on classroom assignments, except where indicated. The style of these pages is directed to that purpose. They are not academic papers, industry conference papers, nor reports to management. They are designed to show you my thought processes and methods.
 
 ## Updates
 
-* 2018-06-23 added qqnorm tests to fico example in Chapter 4, Failure Analysis
-
-## Background
-
-In 2007, I put much effort into acquiring the nuts-and-bolts, dusting off old statistial learning, and throwing them into the front line of the initial skirmishes of the Great Recession. This was not something in my job description at Washington Mutual Bank, the largest ever to fail in the U.S. Fortunately, I was senior enough to decide on my own how best to spend my time. 
-
-I spent a month split between data acquisition and acquiring the basics. (MySQL, R and Python). This is one of several cases studies in this document that I use to show what you can expect if you take me on as a data scientist.
-
-The cases range from spreadsheet sized (a few hundred records) to small (a thousand), middling (125,000) and largest (500,000). As the cases get larger, the number of fields grow, as well, along with the data clean-up.
-
-## The Cases
-
-Each of the cases is designed to illustrate one or more specific skill by presenting an example and explaining what motivated it, what it does, the tools used, and what its output accomplished.
-
-* 2015 Police Involved Homicides: Descriptive statistics, observational data hypothesis testing
-* The Financial Cash Flow Model: OOP Python, model derivation from narrative
-* Failure analysis of subprime Loans: MySQL,R, exploratory data analysis, high-dimensional data, clustering, regression, principal component analyis, machine learning
-* The Enron Email Corpus: Python, NLTK, social network analysis, de-duplication, stopwords, boilerplate stripping
-* Daycare Costs and Unexamined Assumptions: Data skepticism
-* Assorted examples of utility programming in Python, Haskell, Lua and Flex/Bison
+* 2018-06-23 added qqnorm tests to FICO example in Failure Analysis chapter, part 1
+* 2018-06-26 stratified Failure Analysis 125K dataset to censor loan dropouts during 2006, classified remaining loans into performance categories based on monthly payment/nonpayment data and compared FICO distributions in the categories
 
 ## Literate programming: the tight integration of code and text
 
@@ -41,11 +25,33 @@ An analysis can have different audiences, and one of those may be peers, who may
 
     git clone https://github.com/technocrat/technocrat.github.io
 
-## Credentials
+## Background
 
-I've completed the following online courses, to consolidate and expand my previous training and experience in data science. My plan is to use these cases to apply the many new techniques that I have learned to date, and expect to learn as I complete the remaining courses in the series.
+In 2007, I put much effort into acquiring the nuts-and-bolts of data science, dusting off old statistial learning, and throwing them into the front line of the initial skirmishes of the Great Recession. This was not something in my job description at Washington Mutual Bank, the largest ever to fail in the U.S. Fortunately, I was senior enough to decide on my own how best to spend my time. 
 
-!["BerkeleyX Data8.1x Certificate"](https://s3-us-west-2.amazonaws.com/tuva/BerkeleyX+Data8.1x+Certificate+%7C+edX.png)
+I spent a month split between data acquisition and learning three new software tools -- MySQL, R and Python. That dataset is one of several cases studies in this document that I use to show what you can expect if you take me on as a data scientist.
+
+The cases range from spreadsheet sized (a few hundred records) to small (a thousand), middling (125,000) and largest (500,000). As the cases get larger, the number of fields grow, as well, along with the data clean-up.
+
+## The Cases
+
+Each of the cases is designed to illustrate one or more specific skill by presenting an example and explaining what motivated it, what it does, the tools used, and what its output accomplished.
+
+* 2015 police involved homicides: Descriptive statistics, observational data hypothesis testing
+* The cinancial cash flow model: OOP Python, model derivation from narrative
+* Failure analysis of subprime Loans: MySQL,R, exploratory data analysis, high-dimensional data, covariance, clustering, regression, principal component analyis, machine learning
+* The Enron email corpus: Python, NLTK, social network analysis, de-duplication, stopwords, boilerplate stripping
+* Daycare costs and unexamined Assumptions: Data skepticism
+* Examples of utility programming in Python, Haskell, Lua and Flex/Bison
+
+## Current Credentials
+
+I've completed the following online courses, to consolidate and expand my previous training and experience in data science, which sprung, ultimately, from undergraduate and graduate degrees in geology and geophysics. My plan is to use these cases to apply the many new techniques that I have learned to date, and expect to learn as I complete the remaining courses in the series.
+
+### Graduate school level
+
+![MITxPro Data Science and Big Data Analytics: Making Data-Driven Decisions](https://s3-us-west-2.amazonaws.com/tuva/MITxPRO+DSx+Certificate+%7C+MIT+xPro.png)
+
 !["HarvardX PH125.1x Certificate"](https://s3-us-west-2.amazonaws.com/tuva/HarvardX+PH125.1x+Certificate+%7C+edX.png)
 ![""HarvardX PH125.2x Certificat"](https://s3-us-west-2.amazonaws.com/tuva/HarvardX+PH125.2x+Certificate+%7C+edX.png)
 !["HarvardX PH125.3x Certificate"](https://s3-us-west-2.amazonaws.com/tuva/HarvardX+PH125.3x+Certificate+%7C+edX.png)
@@ -53,7 +59,12 @@ I've completed the following online courses, to consolidate and expand my previo
 ![Harvard PH125.5x, Productivity, certificate issuance pending](https://s3-us-west-2.amazonaws.com/tuva/HarvardX%3B+PH125.5x.png)
  
 ![HarvardX PH559x Certificate](https://s3-us-west-2.amazonaws.com/tuva/HarvardX+PH559x+Certificate+%7C+edX.png)
+### Undergraduate level
 
-## Analytic and programming experience
+!["BerkeleyX Data8.1x Certificate"](https://s3-us-west-2.amazonaws.com/tuva/BerkeleyX+Data8.1x+Certificate+%7C+edX.png)
 
-My prior analytic education and experience was in geology/geophysics (M.S.) and law (J.D.) I have been on *nix as my own sysadm since 1984, including Venix (a v7 derivative), Irix (SGI), Ubuntu and other Linux versions, and Mac OSx. My orientation is strongly CLI, rather than GUI, but I have used Excel and Word since their early release. I have non-PC experience with the IBM S/34 and implementation of payroll, general ledger and budgeting. During the mid-90s, I installed, configured and operated http, mail, news, proxy, certificate and LDAP servers. I am familiar with many of the important bash tools, C and Perl.
+## Prior analytic and programming experience
+
+My prior analytic education and experience was in geology/geophysics (M.S.) and law (J.D.) I have been on *nix as my own sysadm since 1984, including Venix (a v7 derivative), Irix (SGI), Ubuntu and other Linux versions, and Mac OSx. My orientation is strongly CLI, rather than GUI, but I have used Excel and Word since their early release. I have non-PC experience with the IBM S/34 and implementation of payroll, general ledger and budgeting. During the mid-90s, I installed, configured and operated http, mail, news, proxy, certificate and LDAP servers. I am familiar with many of the important bash tools (which I use on a daily basis) and with C and Perl (which I can still read, but seldom use).
+
+> When we got our numbers off of greenbar, no one cared how pretty it looked. 
