--- a/index.Rmd
+++ b/index.Rmd
@@ -40,7 +40,7 @@ Each of the cases is designed to illustrate one or more specific skill by presen
 
 * 2015 police involved homicides: Descriptive statistics, observational data hypothesis testing
 * The cinancial cash flow model: OOP Python, model derivation from narrative
-* Failure analysis of subprime Loans: MySQL,R, exploratory data analysis, high-dimensional data, covariance, clustering, regression, principal component analyis, machine learning
+* Failure analysis of subprime Loans: MySQL,R, exploratory data analysis, high-dimensional data, covariance, clustering, regression, principa component analyis, machine learning
 * The Enron email corpus: Python, NLTK, social network analysis, de-duplication, stopwords, boilerplate stripping
 * Daycare costs and unexamined Assumptions: Data skepticism
 * Examples of utility programming in Python, Haskell, Lua and Flex/Bison
