--- a/index.Rmd
+++ b/index.Rmd
@@ -21,6 +21,7 @@ Its intent is to provide prospective employers with concrete evidence of my abil
 * 2018-06-28 illustrated non-normality of FICO distributions with Shapiro-Wilks test; refactored database for principal component analysis
 * 2018-07-01 performed PCA on sample
 * 2018-07-02 performed K-means clustering
+* 2018-07-06 Correspondence analysis performance x clusters
 
 ## Literate programming: the tight integration of code and text
 
